--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -12,14 +12,16 @@
       <div class="logo">
         LOGO
       </div>
-      <ul class="links">
+      <div class="container">
+        <ul class="links">
         <li><a href="google.com">link-one</a></li>
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
-      </ul>
-      <button class="notifications">
+        </ul>
+        <button class="notifications">
         1 new notification
-      </button>
+        </button>
+      </div>
       <div class="profile-image"></div>
     </div>
   </body>
